--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,6 @@ description = "Add your description here"
 authors = [{ name = "Joseph Bolton", email = "joseph.jazz.bolton@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "questionary>=2.1.1",
+]
